added authentication pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary-color: #4baf50;
+  --primary-hover-color: #338351;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,5 +25,40 @@ body {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@layer components {
+  .primary-text-color {
+    @apply text-[#4BAF50];
+  }
+  .auth-background {
+    @apply bg-[url('/images/auth-bg.png')] bg-no-repeat bg-cover bg-center bg-[#F2F2F2] h-screen overflow-auto;
+  }
+
+  .login-form-container {
+    @apply max-w-[584px] w-full min-h-[84vh] flex flex-col items-center justify-center mx-auto;
+  }
+
+  .auth-btn {
+    @apply bg-[var(--primary-color)] w-full py-3 text-white text-[16px] font-medium rounded-lg mt-7;
+  }
+
+  .login-copyright {
+    @apply flex justify-between items-center border-t border-black pt-5 relative w-full max-w-[800px] mt-5 pb-5 md:flex-col md:gap-2 md:bottom-0 md:items-center md:justify-center;
+  }
+
+  .login-copyright-li {
+    @apply sm:text-[14px] sm:flex-wrap sm:whitespace-nowrap;
+  }
+  .career-social-icon {
+    @apply flex gap-4 mb-3.5 md:flex md:items-center md:justify-center;
+  }
+
+  .tab-block {
+    @apply text-gray-600 font-semibold text-center bg-white text-[15px] py-1 rounded-lg px-8 cursor-pointer hover:bg-[var(--primary-hover-color)] hover:text-white transition-all;
+  }
+  .active-tab {
+    @apply text-white bg-[var(--primary-color)] hover:bg-[var(--primary-hover-color)] hover:text-white;
   }
 }
