Worked on Verification flow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
 
 body {
   /* color: var(--foreground); */
-  /* background: var(--background); */
+  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f2f2f2;
 }
@@ -45,7 +45,10 @@ body {
   }
 
   .auth-btn {
-    @apply bg-[var(--primary-color)] w-full py-3 text-white text-[16px] font-medium rounded-lg mt-7;
+    @apply bg-[var(--primary-color)] w-full py-3 text-white text-[16px] font-medium rounded-lg mt-7 ;
+  }
+  .disabled {
+    @apply bg-[var(--primary-color)] w-full py-3 text-white text-[16px] font-medium rounded-lg mt-7 text-gray-300 cursor-not-allowed;
   }
 
   .login-copyright {
@@ -293,7 +296,7 @@ img.organic_img {
   }
 
   .inner_card_organic p {
-      display: -webkit-box;
+      display: -webkit-box ;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
