--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
+/* 
+/* Add any custom styles needed */
+/* .basket-shadow {
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+}  */
 
 :root {
   --background: #ffffff;
