--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@
 @tailwind utilities;
 /* 
 /* Add any custom styles needed */
-/* .basket-shadow {
+.basket-shadow {
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-}  */
+}
 
 :root {
   --background: #ffffff;
